# harry-graphics-scripts

./: .gitignore  pyproject.toml
how_to/: merge_back_bg.md
src/: combine_excel.py  face_crop.py  id_card_sheet_generator.py  merge_back_bg.py  merge_front_bg.py  name_and_pdf.py  pdf_front_back_cropper.py  pdf_front_back_extractor.py  png_back_cropper.py  png_front_cropper.py  rename_images_from_excel.py  tile-front-back.py
